cmake_minimum_required(VERSION 2.6)
project(ACCoRD)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../lib)

set(SOURCE_FILES
        src/ACCoRDConfig.cpp
        src/AircraftState.cpp
        src/AlertThresholds.cpp 
        src/Alerter.cpp 
        src/AlertingMofN.cpp
        src/AziEquiProjection.cpp
        src/BandsRange.cpp
        src/BandsRegion.cpp
	src/BoundingBox.cpp
        src/BoundingRectangle.cpp
        src/CD2D.cpp
        src/CD3D.cpp
        src/CD3DTable.cpp
        src/CDCylinder.cpp
	src/CDSIPolygon.cpp
	src/CDIIPolygon.cpp
        src/CDPolyIter.cpp 
        src/CDPolyIter2D.cpp 
        src/CDPolycarp.cpp
        src/ColoredValue.cpp 
        src/ConflictData.cpp
        src/Constants.cpp
        src/CriteriaCore.cpp
        src/CriticalVectors.cpp
        src/CriticalVectors2D.cpp
        src/DCPAUrgencyStrategy.cpp 
        src/Daidalus.cpp
	src/DaidalusAltBands.cpp
	src/DaidalusCore.cpp
	src/DaidalusDirBands.cpp  
        src/DaidalusFileWalker.cpp
	src/DaidalusHsBands.cpp
	src/DaidalusIntegerBands.cpp
	src/DaidalusParameters.cpp
	src/DaidalusRealBands.cpp
	src/DaidalusVsBands.cpp
        src/Debug.cpp
        src/DensityGrid.cpp
        src/DensityGridAStarSearch.cpp
        src/DensityGridMovingPolys.cpp
        src/DensityGridMovingPolysEst.cpp
        src/DensityGridTimed.cpp
        src/Detection3DParameterReader.cpp
        src/Detection3DParameterWriter.cpp
	src/Detection3DSUM.cpp 
        src/DetectionPolygonParameterReader.cpp
        src/DetectionPolygonParameterWriter.cpp
        src/ENUProjection.cpp
        src/ErrorLog.cpp
        src/FixedAircraftUrgencyStrategy.cpp
        src/format.cpp
        src/General3DState.cpp
        src/GeneralPlan.cpp
        src/GeneralPlanWriter.cpp
        src/GeneralState.cpp
        src/GeneralStateReader.cpp
        src/GeneralStateWriter.cpp
        src/GreatCircle.cpp
        src/GsPlan.cpp
        src/Horizontal.cpp
	src/IndexLevelT.cpp
        src/Integerval.cpp
        src/Interval.cpp
        src/IntervalSet.cpp
        src/Kinematics.cpp
        src/KinematicsDist.cpp
        src/KinematicsLatLon.cpp
        src/KinematicsPosition.cpp
        src/LatLonAlt.cpp
        src/LossData.cpp
        src/MovingPolygon2D.cpp
        src/MovingPolygon3D.cpp
        src/NavPoint.cpp
        src/NoneUrgencyStrategy.cpp
        src/OrthographicProjection.cpp
        src/ParameterData.cpp
        src/ParameterEntry.cpp
        src/Plan.cpp
        src/PlanIO.cpp
        src/PlanReader.cpp
        src/PlanUtil.cpp
        src/PlanWriter.cpp
        src/Point.cpp
        src/Poly2D.cpp
	src/Poly2DLLCore.cpp
        src/Poly3D.cpp
	src/Poly3DLL.cpp
        src/Polycarp3D.cpp
        src/PolycarpAcceptablePolygon.cpp
        src/PolycarpContain.cpp
        src/PolycarpDetection.cpp
        src/PolycarpDoubleQuadratic.cpp
        src/PolycarpEdgeProximity.cpp
        src/PolycarpQuadMinmax.cpp
        src/PolycarpResolution.cpp
        src/PolyPath.cpp
        src/PolyUtil.cpp
        src/Position.cpp
        src/PositionUtil.cpp
        src/ProjectedKinematics.cpp
        src/Projection.cpp
	src/RecoveryInformation.cpp
        src/Route.cpp
        src/SeparatedInput.cpp
        src/SeparatedOutput.cpp
        src/SequenceReader.cpp
        src/SimpleMovingPoly.cpp
        src/SimpleNoPolarProjection.cpp
        src/SimplePoly.cpp
        src/SimpleProjection.cpp
        src/StateReader.cpp
        src/StateVector.cpp
        src/StateWriter.cpp
	src/SUMData.cpp
        src/string_util.cpp
        src/TangentLine.cpp
	src/TrajGen.cpp
        src/TCAS2D.cpp
        src/TCAS3D.cpp
        src/TCASTable.cpp
        src/TcpData.cpp
        src/TrafficState.cpp
	src/TurnGeneration.cpp
        src/Units.cpp
        src/Util.cpp
        src/Vect2.cpp
        src/Vect3.cpp
	src/Vect4.cpp
        src/VectFuns.cpp
        src/Velocity.cpp
        src/Vertical.cpp
        src/WCV_HZ.cpp
        src/WCV_TAUMOD.cpp 
        src/WCV_TAUMOD_SUM.cpp 
        src/WCV_TCOA.cpp
        src/WCV_TCPA.cpp
        src/WCV_TEP.cpp
        src/WCV_tvar.cpp
        src/WCV_VMOD.cpp
        src/WCVTable.cpp
        src/WeatherUtil.cpp)

include_directories(inc)

add_library(ACCoRD SHARED ${SOURCE_FILES})
