cmake_minimum_required(VERSION 3.5)
project(PlexilSrc)

set(CMAKE_CXX_STANDARD 11)

add_definitions(-DHAVE_CONFIG_H -DPIC)

set(PLEXIL_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/)

add_subdirectory(src/third-party/ipc-3.9.1)
add_subdirectory(src/third-party/pugixml)
add_subdirectory(src/value)
add_subdirectory(src/utils)
add_subdirectory(src/expr)
add_subdirectory(src/intfc)
add_subdirectory(src/exec)
add_subdirectory(src/xml-parser)
add_subdirectory(src/app-framework)
add_subdirectory(src/interfaces/Sockets)
add_subdirectory(src/interfaces/UdpAdapter)
add_subdirectory(src/interfaces/Launcher)
add_subdirectory(src/interfaces/GanttListener)
add_subdirectory(src/interfaces/IpcUtils)
add_subdirectory(src/interfaces/IpcAdapter)
add_subdirectory(src/interfaces/CfsAdapter)
add_subdirectory(src/interfaces/PlanDebugListener)
add_subdirectory(src/interfaces/LuvListener)
add_subdirectory(src/universal-exec)
add_subdirectory(src/wrapper)
